--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body>header{
     width: 100%;
 }
 body{
-    height: 1000vh;
+    height: 100vh;
     background-color: #272B30;
 }
 nav.navbar{
@@ -155,11 +155,14 @@ main figcaption p{
 }
 
 .desc-layer{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    min-height: 100vh;
+    scroll-behavior:smooth;
+    overflow: visible;
+    overflow: auto;
     background-color: #2d2d2d;
     display: flex;
     padding-top: 50px;
@@ -193,7 +196,6 @@ main figcaption p{
 
 
 
-
 @media only screen and (max-width: 992px){
     .nav-links-cont{
         flex-direction: column;
@@ -203,5 +205,20 @@ main figcaption p{
         width: 100%;
         margin: auto;
     }
+    .navbar .contatiner-fluid{
+        margin: 0px 10px !important;
+    }
+    nav h1{
+        font-size: 25px;
+    }
+    .inner-nav{
+        /* flex-wrap: nowrap !important; */
+        width: 95%;
+    }
+    .desc-layer{
+        
+        padding-left: 20px;
+    }
+    
 
 }
