--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,11 @@ main figcaption p{
     color: #ffffff;
     z-index: 9999;
     opacity: 100%;
+    padding-bottom: 20px;
 }
-
+.desc-layer img{
+    margin-left: 10px;
+}
 .desc-layer .left h4{
     font-size: 35px;
 }
